--- a/examples/minimal/package.json
+++ b/examples/minimal/package.json
@@ -7,6 +7,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@pulumi/dnsimple": "file:../../sdk/nodejs",
     "@pulumi/pulumi": "dev"
   },
   "devDependencies": {
