--- a/examples/minimal/package.json
+++ b/examples/minimal/package.json
@@ -1,21 +1,19 @@
 {
   "name": "minimal",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "license": "Apache-2.0",
   "main": "bin/index.js",
   "typings": "bin/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
   "dependencies": {
-    "@pulumi/dnsimple": "file:../../sdk/nodejs",
     "@pulumi/pulumi": "dev"
   },
   "devDependencies": {
-    "@types/node": "^8.0.26",
-    "typescript": "^3.0.0"
+    "typescript": "^3.0.3"
   },
   "peerDependencies": {
     "@pulumi/dnsimple": "latest"
-  },
-  "license": "MIT"
+  }
 }
