--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,8 @@ jobs:
       with:
         path: ci-scripts
         repository: pulumi/scripts
+    - name: Unshallow clone for tags
+      run: git fetch --prune --unshallow
     - name: Install Go
       uses: actions/setup-go@v2
       with:
@@ -114,6 +116,8 @@ jobs:
       with:
         path: ci-scripts
         repository: pulumi/scripts
+    - name: Unshallow clone for tags
+      run: git fetch --prune --unshallow
     - name: Install Go
       uses: actions/setup-go@v2
       with:
@@ -146,6 +150,8 @@ jobs:
       with:
         path: ci-scripts
         repository: pulumi/scripts
+    - name: Unshallow clone for tags
+      run: git fetch --prune --unshallow
     - name: Install Go
       uses: actions/setup-go@v2
       with:
@@ -176,6 +182,8 @@ jobs:
       with:
         path: ci-scripts
         repository: pulumi/scripts
+    - name: Unshallow clone for tags
+      run: git fetch --prune --unshallow
     - name: Install Go
       uses: actions/setup-go@v2
       with:
@@ -249,6 +257,8 @@ jobs:
       with:
         path: ci-scripts
         repository: pulumi/scripts
+    - name: Unshallow clone for tags
+      run: git fetch --prune --unshallow
     - name: Install Go
       uses: actions/setup-go@v2
       with:
@@ -308,6 +318,8 @@ jobs:
       with:
         path: ci-scripts
         repository: pulumi/scripts
+    - name: Unshallow clone for tags
+      run: git fetch --prune --unshallow
     - name: Install Go
       uses: actions/setup-go@v2
       with:
