--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -26,6 +26,8 @@ jobs:
       with:
         path: ci-scripts
         repository: pulumi/scripts
+    - name: Unshallow clone for tags
+      run: git fetch --prune --unshallow
     - name: Install Go
       uses: actions/setup-go@v2
       with:
@@ -101,6 +103,8 @@ jobs:
       with:
         path: ci-scripts
         repository: pulumi/scripts
+    - name: Unshallow clone for tags
+      run: git fetch --prune --unshallow
     - name: Install Go
       uses: actions/setup-go@v2
       with:
@@ -133,6 +137,8 @@ jobs:
       with:
         path: ci-scripts
         repository: pulumi/scripts
+    - name: Unshallow clone for tags
+      run: git fetch --prune --unshallow
     - name: Install Go
       uses: actions/setup-go@v2
       with:
@@ -163,6 +169,8 @@ jobs:
       with:
         path: ci-scripts
         repository: pulumi/scripts
+    - name: Unshallow clone for tags
+      run: git fetch --prune --unshallow
     - name: Install Go
       uses: actions/setup-go@v2
       with:
@@ -199,6 +207,8 @@ jobs:
       with:
         path: ci-scripts
         repository: pulumi/scripts
+    - name: Unshallow clone for tags
+      run: git fetch --prune --unshallow
     - name: Install Go
       uses: actions/setup-go@v2
       with:
