Upgrade to v0.5.1 of the DNSimple Terraform Provider

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -15,6 +15,7 @@
     "files": [
         "config/index.ts",
         "config/vars.ts",
+        "emailForward.ts",
         "index.ts",
         "provider.ts",
         "record.ts",
