--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -28,7 +28,8 @@ builds:
   - -X github.com/pulumi/pulumi-dnsimple/provider/v3/pkg/version.Version={{.Tag}}
   main: ./cmd/pulumi-resource-dnsimple/
 changelog:
-  skip: true
+  use: git
+  sort: asc
 release:
   disable: false
 snapshot:
