--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -15,11 +15,14 @@
     "files": [
         "config/index.ts",
         "config/vars.ts",
+        "domain.ts",
         "emailForward.ts",
         "index.ts",
+        "letsEncryptCertificate.ts",
         "provider.ts",
         "record.ts",
         "recordType.ts",
-        "utilities.ts"
+        "utilities.ts",
+        "zoneRecord.ts"
     ]
 }
