--- a/.github/workflows/update-upstream-provider.yml
+++ b/.github/workflows/update-upstream-provider.yml
@@ -23,7 +23,7 @@ env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
   TRAVIS_OS_NAME: linux
   UPSTREAM_PROVIDER_MAJOR_VERSION: ""
-  UPSTREAM_PROVIDER_ORG: pulumi
+  UPSTREAM_PROVIDER_ORG: dnsimple
   UPSTREAM_PROVIDER_REPO: terraform-provider-dnsimple
 jobs:
   update_upstream_provider:
@@ -62,7 +62,7 @@ jobs:
       with:
         python-version: ${{matrix.pythonversion}}
     - name: Get upstream provider sha
-      run: echo "UPSTREAM_PROVIDER_SHA=$(curl https://api.github.com/repos/${{
+      run: echo "UPSTREAM_PROVIDER_SHA=$(curl -L https://api.github.com/repos/${{
         env.UPSTREAM_PROVIDER_ORG }}/${{ env.UPSTREAM_PROVIDER_REPO
         }}/git/ref/tags/v${{ github.event.inputs.version }} | jq .object.sha
         -r)" >> $GITHUB_ENV
