make build_sdks

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -17,6 +17,8 @@
         "config/vars.ts",
         "domain.ts",
         "emailForward.ts",
+        "getCertificate.ts",
+        "getZone.ts",
         "index.ts",
         "letsEncryptCertificate.ts",
         "provider.ts",
