--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -266,50 +266,48 @@ jobs:
     #     author_name: Failure in building provider prerequisites
     #     fields: repo,commit,author,action
     #     status: ${{ job.status }}
-  # publish:
-  #   name: publish
-  #   needs: test
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Checkout Repo
-  #     uses: actions/checkout@v3
-  #   - name: Unshallow clone for tags
-  #     run: git fetch --prune --unshallow --tags
-  #   - name: Install Go
-  #     uses: actions/setup-go@v3
-  #     with:
-  #       go-version: 1.20.1
-  #   - name: Install pulumictl
-  #     uses: jaxxstorm/action-install-gh-release@v1.5.0
-  #     with:
-  #       repo: pulumi/pulumictl
-  #   - name: Install Pulumi CLI
-  #     uses: pulumi/action-install-pulumi-cli@v2
-  #   - name: Configure AWS Credentials
-  #     uses: aws-actions/configure-aws-credentials@v1
-  #     with:
-  #       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #       aws-region: us-east-2
-  #       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #       role-duration-seconds: 7200
-  #       role-external-id: upload-pulumi-release
-  #       role-session-name: ${{ env.PROVIDER }}@githubActions
-  #       role-to-assume: ${{ secrets.AWS_UPLOAD_ROLE_ARN }}
-  #   - name: Set PreRelease Version
-  #     run: echo "GORELEASER_CURRENT_TAG=v$(pulumictl get version --language generic)"
-  #       >> $GITHUB_ENV
-  #   - name: Run GoReleaser
-  #     uses: goreleaser/goreleaser-action@v2
-  #     with:
-  #       args: -p 3 release --rm-dist --timeout 60m0s
-  #       version: latest
-  #   - if: failure() && github.event_name == 'push'
-  #     name: Notify Slack
-  #     uses: 8398a7/action-slack@v3
-  #     with:
-  #       author_name: Failure in publishing binaries
-  #       fields: repo,commit,author,action
-  #       status: ${{ job.status }}
+  publish:
+    name: publish
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Repo
+      uses: actions/checkout@v3
+    - name: Unshallow clone for tags
+      run: git fetch --prune --unshallow --tags
+    - name: Install Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.20.1
+    - name: Install pulumictl
+      uses: jaxxstorm/action-install-gh-release@v1.5.0
+      with:
+        repo: pulumi/pulumictl
+    - name: Install Pulumi CLI
+      uses: pulumi/action-install-pulumi-cli@v2
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-region: us-east-2
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        role-duration-seconds: 7200
+        role-external-id: upload-pulumi-release
+        role-session-name: ${{ env.PROVIDER }}@githubActions
+        role-to-assume: ${{ secrets.AWS_UPLOAD_ROLE_ARN }}
+    - name: Set PreRelease Version
+      run: echo "GORELEASER_CURRENT_TAG=v$(pulumictl get version --language generic)" >> $GITHUB_ENV
+    - name: Run GoReleaser
+      uses: goreleaser/goreleaser-action@v2
+      with:
+        args: -p 3 release --rm-dist --timeout 60m0s
+        version: latest
+    # - if: failure() && github.event_name == 'push'
+    #   name: Notify Slack
+    #   uses: 8398a7/action-slack@v3
+    #   with:
+    #     author_name: Failure in publishing binaries
+    #     fields: repo,commit,author,action
+    #     status: ${{ job.status }}
   # publish_java_sdk:
   #   continue-on-error: true
   #   name: publish_java_sdk
@@ -363,6 +361,7 @@ jobs:
   #       build-root-directory: ./sdk/java
   #       gradle-version: 7.4.1
   publish-sdks:
+    needs: publish
     runs-on: ubuntu-latest
     name: A job to publish SDK's
     steps:
