--- a/.github/workflows/publish-test.yml
+++ b/.github/workflows/publish-test.yml
@@ -268,6 +268,7 @@ jobs:
     #     status: ${{ job.status }}
   publish:
     name: publish
+    needs: build_sdk
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Repo
