--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -58,6 +58,7 @@ jobs:
       with:
         module-path: provider
         ignore-modules: >-
+          github.com/oracle/terraform-provider-dnsimple/shim,
           github.com/aead/chacha20,
           github.com/apache/arrow/go/v12,
           github.com/apache/thrift/lib/go/thrift,
