--- a/examples/record/ts/package.json
+++ b/examples/record/ts/package.json
@@ -2,12 +2,11 @@
   "name": "minimal",
   "version": "0.1.0",
   "license": "Apache-2.0",
-  "main": "bin/index.js",
-  "typings": "bin/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
   "dependencies": {
+    "@pulumi/dnsimple": "^3.4.0",
     "@pulumi/pulumi": "^3.0.0"
   },
   "devDependencies": {
