--- a/.ci-mgmt.yaml
+++ b/.ci-mgmt.yaml
@@ -1,5 +1,6 @@
 provider: dnsimple
 major-version: 3
+upstreamProviderOrg: dnsimple
 env:
   DNSIMPLE_TOKEN: ${{ secrets.DNSIMPLE_TOKEN }}
   DNSIMPLE_ACCOUNT: ${{ secrets.DNSIMPLE_ACCOUNT }}
