--- a/.ci-mgmt.yaml
+++ b/.ci-mgmt.yaml
@@ -6,3 +6,8 @@ env:
   DNSIMPLE_ACCOUNT: ${{ secrets.DNSIMPLE_ACCOUNT }}
 makeTemplate: bridged
 team: ecosystem
+pulumiConvert: 1
+plugins:
+  - name: terraform
+    version: "1.0.16"
+    kind: converter
