--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "upstream"]
 	path = upstream
 	url = https://github.com/dnsimple/terraform-provider-dnsimple.git
+        ignore = dirty
