Remove the overlay in favor of extra types

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -22,7 +22,10 @@
         "index.ts",
         "letsEncryptCertificate.ts",
         "provider.ts",
-        "recordType.ts",
+        "types/enums/index.ts",
+        "types/index.ts",
+        "types/input.ts",
+        "types/output.ts",
         "utilities.ts",
         "zoneRecord.ts"
     ]
