Upgrade terraform-provider-dnsimple to v0.17.0 (#455)
* WIP Initial mapping to PF

* Apply ID type overrides

Depends on pulumi/pulumi-terraform-bridge#2155.

* make build_sdks

* Add explanation in resources.go for the ID insertion

* Remove the overlay in favor of extra types

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -22,8 +22,10 @@
         "index.ts",
         "letsEncryptCertificate.ts",
         "provider.ts",
-        "record.ts",
-        "recordType.ts",
+        "types/enums/index.ts",
+        "types/index.ts",
+        "types/input.ts",
+        "types/output.ts",
         "utilities.ts",
         "zoneRecord.ts"
     ]
